# pastey-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: data.rs  main.rs  routes.rs
src/templates/: base.html  index.html  new_paste.html  view.html
templates/: base.html  index.html  new_paste.html  view.html
