[package]
name = "pastey"
version = "0.1.0"
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/pastey"
repository = "https://github.com/celeo/pastey"
documentation = "https://docs.rs/pastey"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "paste"
]
categories = [
  "web-programming::http-server"
]

[dependencies]
anyhow = "1.0.42"
axum = "0.1.3"
chrono = "0.4.19"
dotenv = "0.15.0"
hyper = "0.14.11"
log = "0.4.14"
pretty_env_logger = "0.4.0"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.9.0", features = ["full"] }
