[package]
name = "pastey"
version = "0.1.0"
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/pastey"
repository = "https://github.com/celeo/pastey"
documentation = "https://docs.rs/pastey"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "paste"
]
categories = [
  "web-programming::http-server"
]

[dependencies]
anyhow = "1.0.42"
askama = "0.10.5"
axum = "0.1.3"
bytes = "1.0.1"
chrono = "0.4.19"
dotenv = "0.15.0"
http = "0.2.4"
http-body = "0.4.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
sqlx = { version = "0.5.5", features = ["chrono", "runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.9.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
